--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "e2e:ci": "MIGRATING=true NODE_ENV=ci yarn migrate NODE_ENV=ci yarn knex seed:run --knexfile db/knexfile.js && yarn start:prod",
     "test-junit": "cypress run --reporter junit --reporter-options 'mochaFile=junit-results/my-test-output.xml'",
     "test-multiple": "cypress run --reporter mocha-multi-reporters --reporter-options configFile=config.json",
-    "updateConfig": "aws s3 cp .env-prod s3://configurations-pipeline/.env --profile carpedev"
+    "updateConfig": "aws s3 cp .env-prod s3://configurations-pipeline/.env --profile carpedev",
+    "generateCerts": "sudo openssl req -x509 -nodes -days 730 -newkey rsa:2048 -keyout ./nginx/nginx-selfsigned.key -out ./nginx/nginx-selfsigned.crt -config ./nginx/req.cnf -sha256"
   },
   "author": "",
   "license": "ISC",
@@ -71,7 +72,7 @@
     "lint-staged": "^8.1.0",
     "prettier": "^1.15.3",
     "prettier-eslint": "^8.8.2",
-    "react-test-renderer": "^16.7.0-alpha.2",
+    "react-test-renderer": "16.7.0-alpha.2",
     "supertest": "^3.3.0",
     "webpack-dev-middleware": "^3.5.0",
     "webpack-hot-middleware": "^2.24.3"
