--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "migrate": "MIGRATING=true ./scripts/migrate.sh",
     "start": "MIGRATING=true yarn migrateAndSeed && DEBUG=knex*,-knex:client,-knex:connection,-knex:pool nodemon --inspect=0.0.0.0 .",
     "start:prod": "NODE_ENV=production node .",
-    "e2e": "PG_PORT=5555 PG_HOST=localhost CYPRESS_BASE_URL=http://localhost cypress open --env configFile=local",
+    "e2e": "PG_PORT=5555 PG_HOST=localhost CYPRESS_BASE_URL=https://carpe cypress open --env configFile=local",
     "e2e:ci": "MIGRATING=true NODE_ENV=ci yarn migrate NODE_ENV=ci yarn knex seed:run --knexfile db/knexfile.js && yarn start:prod",
     "test-junit": "cypress run --reporter junit --reporter-options 'mochaFile=junit-results/my-test-output.xml'",
     "test-multiple": "cypress run --reporter mocha-multi-reporters --reporter-options configFile=config.json",
-    "updateConfig": "aws s3 cp .env-prod s3://configurations-pipeline/.env --profile carpedev"
+    "updateConfig": "aws s3 cp .env-prod s3://configurations-pipeline/.env --profile carpedev",
+    "generateCerts": "sudo openssl req -x509 -nodes -days 730 -newkey rsa:2048 -keyout ./nginx/nginx-selfsigned.key -out ./nginx/nginx-selfsigned.crt -config ./nginx/req.cnf -sha256"
   },
   "author": "",
   "license": "ISC",
@@ -52,38 +53,38 @@
     "babel-eslint": "^10.0.1",
     "babel-preset-jest": "^23.2.0",
     "babel7-jest": "^1.0.1",
-    "eslint": "^5.9.0",
+    "eslint": "^5.11.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.3.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jest": "^22.1.2",
     "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-prettier": "^3.0.0",
-    "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.2",
     "fs-extra": "^7.0.1",
     "glob": "7.1.3",
-    "happypack": "^5.0.0",
-    "husky": "^1.2.0",
+    "happypack": "^5.0.1",
+    "husky": "^1.3.1",
     "jest": "^23.6.0",
     "jest-junit": "^5.2.0",
     "jest-styled-components": "^6.3.1",
     "lighthouse": "^4.0.0-alpha.2-3.2.1",
-    "lint-staged": "^8.0.5",
-    "prettier": "^1.15.2",
+    "lint-staged": "^8.1.0",
+    "prettier": "^1.15.3",
     "prettier-eslint": "^8.8.2",
-    "react-test-renderer": "^16.7.0-alpha.0",
+    "react-test-renderer": "16.7.0-alpha.2",
     "supertest": "^3.3.0",
-    "webpack-dev-middleware": "^3.4.0",
+    "webpack-dev-middleware": "^3.5.0",
     "webpack-hot-middleware": "^2.24.3"
   },
   "dependencies": {
-    "@babel/core": "^7.2.0",
-    "@babel/plugin-proposal-class-properties": "^7.2.1",
-    "@babel/preset-env": "^7.2.0",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
-    "aws-sdk": "^2.360.0",
-    "babel-loader": "^8.0.4",
-    "babel-plugin-styled-components": "^1.8.0",
+    "aws-sdk": "^2.383.0",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-styled-components": "^1.10.0",
     "babel-plugin-transform-imports": "^1.5.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.21",
     "babel-polyfill": "^6.26.0",
@@ -92,6 +93,7 @@
     "compression-webpack-plugin": "^2.0.0",
     "connect-pg-simple": "^5.0.0",
     "cookie-parser": "^1.4.3",
+    "date-fns": "^1.30.1",
     "dotenv-safe": "^6.1.0",
     "eslint-plugin-react-hooks": "^0.0.0",
     "esm": "^3.0.84",
@@ -103,27 +105,26 @@
     "express-session": "^1.15.6",
     "express-winston": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "knex": "^0.15.2",
+    "knex": "^0.16.3",
     "lodash": "^4.17.11",
-    "moment": "^2.22.2",
     "multer": "^1.4.1",
-    "nodemon": "^1.18.7",
+    "nodemon": "^1.18.9",
     "pg": "^7.7.1",
     "prop-types": "^15.6.2",
     "qs": "^6.6.0",
-    "react": "16.7.0-alpha.0",
-    "react-dom": "^16.7.0-alpha.0",
-    "react-hot-loader": "^4.3.12",
+    "react": "16.7.0-alpha.2",
+    "react-dom": "16.7.0-alpha.2",
+    "react-hot-loader": "^4.6.3",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-virtualized": "^9.21.0",
     "request": "^2.88.0",
     "sharp": "^0.21.1",
-    "styled-components": "^4.1.1",
-    "superagent": "^4.0.0",
+    "styled-components": "^4.1.3",
+    "superagent": "^4.1.0",
     "uuid": "^3.3.2",
-    "webpack": "^4.25.1",
-    "webpack-cli": "^3.1.2",
+    "webpack": "^4.28.3",
+    "webpack-cli": "^3.2.0",
     "webpack-manifest-plugin": "^2.0.4",
     "winston": "^3.1.0"
   },
