--- a/imageResizer/package.json
+++ b/imageResizer/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "docker run -v \"$PWD\":/var/task lambci/lambda:build-nodejs8.10 npm install",
+    "build": "docker run -v \"$PWD\":/var/task lambci/lambda:build-nodejs8.10 npm install sharp",
     "test": "echo \"Error: no test specified\" && exit 1",
     "deploy": "cp ../shared/constants.js . && zip -r -X ../imageResizer.zip * && cd .. && aws lambda update-function-code --function-name carpedalan-west --zip-file fileb://imageResizer.zip --profile carpedev --region us-west-2",
     "stage": "cp ../shared/constants.js . && zip -r -X ../imageResizer.zip * && cd .. && aws lambda update-function-code --function-name carpedalan-west --zip-file fileb://imageResizer.zip --profile carpedev --region us-west-2"
@@ -12,8 +12,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "knex": "^0.16.3",
-    "sharp": "^0.21.0",
-    "sqip": "^0.3.3"
+    "sharp": "^0.21.1"
   }
 }
