--- a/package.json
+++ b/package.json
@@ -93,7 +93,7 @@
     "compression-webpack-plugin": "^2.0.0",
     "connect-pg-simple": "^5.0.0",
     "cookie-parser": "^1.4.3",
-    "date-fns": "^1.30.1",
+    "date-fns": "2.0.0-alpha.26",
     "dotenv-safe": "^6.1.0",
     "eslint-plugin-react-hooks": "^0.0.0",
     "esm": "^3.0.84",
@@ -107,7 +107,9 @@
     "html-webpack-plugin": "^3.2.0",
     "knex": "^0.16.3",
     "lodash": "^4.17.11",
+    "moment": "^2.23.0",
     "multer": "^1.4.1",
+    "multer-s3": "^2.9.0",
     "nodemon": "^1.18.9",
     "pg": "^7.7.1",
     "prop-types": "^15.6.2",
