--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,6 +15,7 @@ http {
         location / {
           proxy_pass http://node-app;
         }
+        fastcgi_read_timeout 300;
 
     }
 
@@ -22,6 +23,7 @@ http {
     listen 443 http2 ssl;
     listen [::]:443 http2 ssl;
     client_max_body_size 500M;
+    fastcgi_read_timeout 300;
 
     location / {
       proxy_pass http://node-app;
