--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,8 @@ services:
   alb:
     container_name: alb
     depends_on:
-      - app
+      app: 
+        condition: service_healthy
     image: ekino/nginx-brotli:latest-1.12.2-bfd2885
     restart: always
     volumes: 
@@ -42,6 +43,12 @@ services:
     environment:
       PORT: 80
     command: yarn start
+    healthcheck:
+      test: ["CMD-SHELL", "curl --silent --fail localhost:80/healthcheck || exit 1"]
+      interval: 1s
+      timeout: 1s
+      retries: 20
+
   pg:
     image: postgres:10.0-alpine
     container_name: pg
