--- a/package.json
+++ b/package.json
@@ -117,8 +117,8 @@
     "react": "16.8.0-alpha.0",
     "react-dom": "16.8.0-alpha.0",
     "react-hot-loader": "^4.6.3",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
+    "react-router": "^4.4.0-beta.6",
+    "react-router-dom": "^4.4.0-beta.6",
     "react-select": "^2.2.0",
     "react-virtualized": "^9.21.0",
     "request": "^2.88.0",
