--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,14 @@ services:
   alb:
     container_name: alb
     depends_on:
-      - app
-    image: nginx:1.15.8-alpine
+      app: 
+        condition: service_healthy
+    image: ekino/nginx-brotli:latest-1.12.2-bfd2885
     restart: always
     volumes: 
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./nginx/nginx-selfsigned.crt:/etc/ssl/certs/nginx-selfsigned.crt
-      - ./nginx/nginx-selfsigned.key:/etc/ssl/private/nginx-selfsigned.key
+      - ./nginx/carpe+5.pem:/etc/ssl/certs/carpe+5.pem
+      - ./nginx/carpe+5-key.pem:/etc/ssl/private/carpe+5-key.pem
     ports:
       - 80:80
       - 443:443
@@ -42,6 +43,12 @@ services:
     environment:
       PORT: 80
     command: yarn start
+    healthcheck:
+      test: ["CMD-SHELL", "curl --silent --fail localhost:80/healthcheck || exit 1"]
+      interval: 1s
+      timeout: 1s
+      retries: 20
+
   pg:
     image: postgres:10.0-alpine
     container_name: pg
