--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,6 +15,7 @@ http {
         location / {
           proxy_pass http://node-app;
         }
+        fastcgi_read_timeout 300;
 
     }
 
@@ -22,6 +23,7 @@ http {
     listen 443 http2 ssl;
     listen [::]:443 http2 ssl;
     client_max_body_size 500M;
+    fastcgi_read_timeout 300;
 
     location / {
       proxy_pass http://node-app;
@@ -29,8 +31,8 @@ http {
 
 
 
-    ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
-    ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
+    ssl_certificate /etc/ssl/certs/carpe+5.pem;
+    ssl_certificate_key /etc/ssl/private/carpe+5-key.pem;
     # ssl_dhparam /etc/ssl/certs/dhparam.pem;
 
     ########################################################################
@@ -55,39 +57,14 @@ http {
     add_header X-Frame-Options DENY;
     add_header X-Content-Type-Options nosniff;
 
-    gzip  on;
-    gzip_http_version 1.0;
-    gzip_comp_level 2;
-    gzip_min_length 1100;
-    gzip_buffers     4 8k;
-    gzip_proxied any;
-    gzip_types
-      # text/html is always compressed by HttpGzipModule
-      text/css
-      text/javascript
-      text/xml
-      text/plain
-      image/jpeg
-      image/webp
-      image/png
-      text/x-component
-      application/javascript
-      application/json
-      application/xml
-      application/rss+xml
-      font/truetype
-      font/opentype
-      application/vnd.ms-fontobject
-      image/svg+xml;
-
-    gzip_static on;
-
-    gzip_proxied        expired no-cache no-store private auth;
-    gzip_disable        "MSIE [1-6]\.";
-    gzip_vary           on;
-
-    ##################################
-    # END https://cipherli.st/ BLOCK #
-    ##################################
+    brotli on;
+    brotli_comp_level 6;
+    brotli_types application/eot application/x-otf application/font application/x-perl application/font-sfnt application/x-ttf application/javascript
+            font/eot application/json font/ttf application/opentype font/otf application/otf font/opentype application/pkcs7-mime image/svg+xml
+            application/truetype text/css application/ttf text/csv application/vnd.ms-fontobject text/html application/xhtml+xml text/javascript
+            application/xml text/js application/xml+rss text/plain application/x-font-opentype text/richtext application/x-font-truetype 
+            text/tab-separated-values application/x-font-ttf text/xml application/x-httpd-cgi text/x-script application/x-javascript
+            text/x-component application/x-mpegurl text/x-java-source application/x-opentype image/webp
+            ;
     }
 }
