--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "lint-staged": "^8.1.0",
     "prettier": "^1.15.3",
     "prettier-eslint": "^8.8.2",
-    "react-test-renderer": "16.7.0-alpha.2",
+    "react-test-renderer": "16.8.0-alpha.0",
     "supertest": "^3.3.0",
     "webpack-dev-middleware": "^3.5.0",
     "webpack-hot-middleware": "^2.24.3"
@@ -93,7 +93,7 @@
     "compression-webpack-plugin": "^2.0.0",
     "connect-pg-simple": "^5.0.0",
     "cookie-parser": "^1.4.3",
-    "date-fns": "^1.30.1",
+    "date-fns": "2.0.0-alpha.26",
     "dotenv-safe": "^6.1.0",
     "eslint-plugin-react-hooks": "^0.0.0",
     "esm": "^3.0.84",
@@ -107,16 +107,19 @@
     "html-webpack-plugin": "^3.2.0",
     "knex": "^0.16.3",
     "lodash": "^4.17.11",
+    "moment": "^2.23.0",
     "multer": "^1.4.1",
+    "multer-s3": "^2.9.0",
     "nodemon": "^1.18.9",
     "pg": "^7.7.1",
     "prop-types": "^15.6.2",
     "qs": "^6.6.0",
-    "react": "16.7.0-alpha.2",
-    "react-dom": "16.7.0-alpha.2",
+    "react": "16.8.0-alpha.0",
+    "react-dom": "16.8.0-alpha.0",
     "react-hot-loader": "^4.6.3",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
+    "react-router": "^4.4.0-beta.6",
+    "react-router-dom": "^4.4.0-beta.6",
+    "react-select": "^2.2.0",
     "react-virtualized": "^9.21.0",
     "request": "^2.88.0",
     "sharp": "^0.21.1",
