--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -183,6 +183,33 @@ jobs:
       - store_artifacts:
           path: reports/junit
 
+  migrate:
+    <<: *defaults
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+          - v1-dependencies-{{ checksum "package.json" }}
+          # fallback to using the latest cache if no exact match is found
+          - v1-dependencies-
+      - run: 
+          name: install deps
+          command: |
+            sudo apt-get install python-pip python-dev build-essential
+            pip install awscli
+
+      
+
+      - run: 
+          name: Fetch config
+          command: |
+            aws s3 cp s3://configurations-pipeline/.env . 
+
+
+      - run:
+          name: "Migrate"
+          command: yarn migrate
+
   unit_test:
     <<: *defaults
     steps:
@@ -235,6 +262,9 @@ workflows:
           requires:
             - dependencies
       - integration:
+          requires:
+            - dependencies
+      - migrate:
           requires:
             - dependencies
       - e2e:
