--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   alb:
     container_name: alb
     depends_on:
+      # - app
       app: 
         condition: service_healthy
     image: ekino/nginx-brotli:latest-1.12.2-bfd2885
