--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start": "MIGRATING=true yarn migrateAndSeed && DEBUG=knex*,-knex:client,-knex:connection,-knex:pool nodemon --inspect=0.0.0.0 .",
     "start:prod": "NODE_ENV=production node .",
     "e2e": "PG_PORT=5555 PG_HOST=localhost CYPRESS_BASE_URL=https://carpe cypress open --env configFile=local",
+    "cypress": "PG_PORT=5555 PG_HOST=localhost CYPRESS_BASE_URL=https://carpe cypress run --env configFile=local",
     "e2e:ci": "MIGRATING=true NODE_ENV=ci yarn migrate NODE_ENV=ci yarn knex seed:run --knexfile db/knexfile.js && yarn start:prod",
     "test-junit": "cypress run --reporter junit --reporter-options 'mochaFile=junit-results/my-test-output.xml'",
     "test-multiple": "cypress run --reporter mocha-multi-reporters --reporter-options configFile=config.json",
@@ -44,7 +45,7 @@
     "setupTestFrameworkScriptFile": "./setupTests.js"
   },
   "lint-staged": {
-    "*.js": [
+    "*.{js,jsx}": [
       "eslint --fix",
       "git add"
     ]
